--- a/index.html
+++ b/index.html
@@ -71,7 +71,233 @@
         </div>
 
     </div>
+    <div class="features-nav-bar">
+       <div class="left-panel features-nav-bar-border">
+           <i class="fa-solid fa-bars"></i>
+           <p>All</p>
+       </div>
+        <p class="features-nav-bar-border">Fresh</p>
+        <p class="features-nav-bar-border">Mx Player</p>
+        <p class="features-nav-bar-border">Sell</p>
+        <p class="features-nav-bar-border">Best Sellers</p>
+        <p class="features-nav-bar-border">Today's Deals</p>
+        <p class="features-nav-bar-border">Mobiles</p>
+        <p class="features-nav-bar-border">Customer Service</p>
+        <p class="features-nav-bar-border">Electronics</p>
+        <p class="features-nav-bar-border">Home & Kitchen</p>
+        <p class="features-nav-bar-border">Prime</p>
+        <p class="features-nav-bar-border">Amazon Pay</p>
+        <p class="features-nav-bar-border">New Releases</p>
+        <p class="features-nav-bar-border">Fashion</p>
+        <p class="features-nav-bar-border">Car & Motorbike</p>
+        <p class="features-nav-bar-border">Computers</p>
+    </div>
 </header>
+<main>
+    <div class="header-image"></div>
+    <div class="feature-cards-section">
+        <div class="feature-cards">
+<!--            section 1-->
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Explore more from Small Business</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-1-1.jpg"/>
+                            <p>Ethnic, dresses & more</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-1-2.jpg"/>
+                            <p>Decor</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-1-3.jpg"/>
+                            <p>Fashion accessories</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-1-4.jpg"/>
+                            <p>Glassware & drinkware</p>
+                        </div>
+                    </div>
+                    <p class="card-link">Explore all</p>
+                </div>
+            </div>
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Revamp your home in style</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-2-1.jpg"/>
+                            <p>Cushion covers, bedsheets & more</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-2-2.jpg"/>
+                            <p>Figurines, vases & more</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-2-3.jpg"/>
+                            <p>Home storage</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-2-4.jpg"/>
+                            <p>Lighting solutions</p>
+                        </div>
+                    </div>
+                    <p class="card-link">Explore all</p>
+                </div>
+            </div>
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Starting &#8377;149 | Headphones</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-3-1.jpg"/>
+                            <p>Starting &#8377;249 | boAt</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-3-2.jpg"/>
+                            <p>Starting &#8377;349 | boult</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-3-3.jpg"/>
+                            <p>Starting &#8377;649 | Noise</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-3-4.jpg"/>
+                            <p>Starting &#8377;149 | Zebronics</p>
+                        </div>
+                    </div>
+                    <p class="card-link">See all offers</p>
+                </div>
+            </div>
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Appliances for your home | Up to 55% off</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-4-1.jpg"/>
+                            <p>Air conditioners</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-4-2.jpg"/>
+                            <p>Refrigerators</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-4-3.jpg"/>
+                            <p>Microwaves</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-4-4.jpg"/>
+                            <p>Washing machines</p>
+                        </div>
+                    </div>
+                    <p class="card-link">See more</p>
+                </div>
+            </div>
+
+<!--            section 2-->
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Min. 40% off | Fun toys & games | Amazon brands</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-5-1.jpg"/>
+                            <p>Min. 40% off | soft toys</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-5-2.jpg"/>
+                            <p>Min. 40% off | Indoor games</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-5-3.jpg"/>
+                            <p>Min. 40% off | Ride ons</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-5-4.jpg"/>
+                            <p>Min. 40% off | outdoor games</p>
+                        </div>
+                    </div>
+                    <p class="card-link">See all offers</p>
+                </div>
+            </div>
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Starting &#8377;199 | Amazon Brands & more</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-6-1.jpg"/>
+                            <p>Starting &#8377;199 | Bedsheets</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-6-2.jpg"/>
+                            <p>Starting &#8377;199 | Curtains </p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-6-3.jpg"/>
+                            <p>Minimum 40% off | Ironing board & more</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-6-4.jpg"/>
+                            <p>Up to 60% off | Home decor</p>
+                        </div>
+                    </div>
+                    <p class="card-link">See more</p>
+                </div>
+            </div>
+
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Automotive essentials | Up to 60% off</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-7-1.jpg"/>
+                            <p>Cleaning accessories</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-7-2.jpg"/>
+                            <p>Tyre & rim care</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-7-3.jpg"/>
+                            <p>Helmets</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-7-4.jpg"/>
+                            <p>Vacuum cleaner</p>
+                        </div>
+                    </div>
+                    <p class="card-link">See more</p>
+                </div>
+            </div>
+            <div class="outer-card">
+                <div class="inner-card">
+                    <h2>Up to 60% off | Styles for women</h2>
+                    <div class="card-images">
+                        <div class="image-section">
+                            <img src="assets/card-images/card-8-1.jpg"/>
+                            <p>Women's Clothing</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-8-2.jpg"/>
+                            <p>Footwear+Handbags</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-8-3.jpg"/>
+                            <p>Watches</p>
+                        </div>
+                        <div>
+                            <img src="assets/card-images/card-8-4.jpg"/>
+                            <p>Fashion jewellery</p>
+                        </div>
+                    </div>
+                    <p class="card-link">End of season sale</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</main>
 
 </body>
 </html>
