feat(amazon-clone): footer section and services section implementation

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 <p>Min. 40% off | outdoor games</p>
                             </div>
                         </div>
-                        <p class="card-link">See all offers</p>
+<!--                        <p class="card-link">See all offers</p>-->
                     </div>
                 </div>
                 <div class="outer-card">
@@ -348,7 +348,7 @@
         </p>
     </div>
     <div class="horizontal-divider"></div>
-    <div class="top-scroll">
+    <div class="top-scroll" id="scroll-to-top-btn">
         Back to top
     </div>
 </main>
@@ -408,6 +408,51 @@
 
 
        </div>
+    </div>
+    <div class="amazon-services">
+        <div class="service-cards">
+            <div class="card">
+                <p class="header">AbeBooks</p>
+                <p>Books, arts & collectibles</p>
+            </div>
+            <div class="card">
+                <p class="header">Shopbop</p>
+                <p>Designer</p>
+                <p>Fashion Brands</p>
+            </div>
+            <div class="card">
+                <p class="header">Amazon Web Services</p>
+                <p>Scalable Cloud</p>
+                <p>Computing Services</p>
+            </div>
+            <div class="card">
+                <p class="header">Amazon Business</p>
+                <p>Everything For Your Business</p>
+            </div>
+            <div class="card">
+                <p class="header">Audible</p>
+                <p>Download</p>
+                <p>Audio Books</p>
+
+            </div>
+            <div class="card">
+                <p class="header">Prime Now</p>
+                <p>2-Hour Delivery on Everyday Items</p>
+            </div>
+            <div class="card">
+                <p class="header">IMDb</p>
+                <p>Movies, TV \& Celebrities</p>
+            </div>
+            <div class="card">
+                <p class="header">Amazon Prime Music</p>
+                <p>100 million songs, ad-free Over 15 million podcast episodes</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <p>Conditions of Use & Sale &nbsp; &nbsp; &nbsp; Privacy Notice &nbsp; &nbsp; &nbsp;Interest-Based Ads</p>
+        <p>&#169; 1996-2024, Amazon.com, Inc. or its affiliates</p>
     </div>
 </footer>
 <script src="index.js" type="application/javascript"></script>
